# App_Diff_Equations

./: .gitignore  README.md  pyproject.toml
src/: Start.py
src/pages/: 1_PowerSeries.py  2_Frobenius.py  Legendre  Series
src/solutions/: parsing.py  series.py
